--- a/ElectricalPowerSystems/App.xaml
+++ b/ElectricalPowerSystems/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/lang.ru-RU.xaml">
+                <ResourceDictionary x:Name="lang_RU" Source="Resources/lang.ru-RU.xaml">
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
