--- a/ElectricalPowerSystems/Resources/lang.ru-RU.xaml
+++ b/ElectricalPowerSystems/Resources/lang.ru-RU.xaml
@@ -9,6 +9,7 @@
     <v:String x:Key="m_menu_Help">Помощь</v:String>
     <v:String x:Key="m_menu_New_Project">Новый проект</v:String>
     <v:String x:Key="m_menu_Open_Project">Открыть проект</v:String>
+    <v:String x:Key="m_menu_Save_Project">Сохранить проект</v:String>
     <v:String x:Key="m_menu_Open_Recent">Недавние файлы</v:String>
     <v:String x:Key="m_menu_Clear_List">Очистить список</v:String>
     <v:String x:Key="m_menu_Exit">Выход</v:String>
@@ -26,4 +27,7 @@
     <v:String x:Key="m_Errors_Position_Header">Позиция</v:String>
     <v:String x:Key="m_Errors_Message_Header">Сообщение</v:String>
     <v:String x:Key="m_Memory_Usage_Header">Использование памяти</v:String>
+    <v:String x:Key="m_Unsaved_Changes">Закрыть файл, несмотря на несохранённые изменения?</v:String>
+    <v:String x:Key="m_Yes">Да</v:String>
+    <v:String x:Key="m_No">Нет</v:String>
 </ResourceDictionary>
